# equitable-lunch-invites

./: .gitignore  LICENSE  README.md  lunches.py  main.py  pyproject.toml
.github/workflows/: data-safety.yml
src/equitable_lunch_invites/: __init__.py  __main__.py  cli.py  io.py  models.py  selection.py  state.py
templates/: planner_templates.xlsx
tests/: test_planner.py  test_representation_trials.py
