[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equitable-lunch-invites"
version = "0.1.0"
description = "Deterministic, fairness-aware host/guest event invite planner."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["openpyxl>=3.1"]

[project.scripts]
equitable-invites = "equitable_lunch_invites.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
